Now the navbar is fixed, the page content doesn't know about it, so w… (#636)
* Now the navbar is fixed, the page content doesn't know about it, so we need padding, otherwise the navbar overlaps the top heading


* apply header hight to all pages

---------

--- a/application/frontend/src/scaffolding/Header/header.scss
+++ b/application/frontend/src/scaffolding/Header/header.scss
@@ -1,10 +1,18 @@
 // 1. NAVBAR CONTAINER & LAYOUT
+:root {
+    /* Define the header's height once */
+    --header-height: 4.1rem; // 64px
+}
+main {
+  padding-top: 4rem;
+}
 
 .navbar {
   // Positioning and background
   position: fixed;
   width: 100%;
   top: 0;
+  height: var(--header-height);
   z-index: 50;
   background-color: rgba(var(--background-rgb), 0.8);
   backdrop-filter: blur(4px);
@@ -300,3 +308,4 @@
     display: block;
   }
 }
+
